[package]
name = "s3_manager"
version = "0.1.0"
description = "S3 Manager: A tool to manage S3 buckets"
authors = ["Lukasz Celitan, @SpaceoutPL"]
license = "MIT"
repository = ""
default-run = "s3_manager"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all"] }
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio-stream = "0.1.11"
tokio = { version = "1.22.0", features = ["full", "macros"] }

cached = "0.40.0"
thiserror = "1.0.37"
itertools = "*"
walkdir = "*"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
